# robbie

./: .env.example  .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json
apps/client/: index.html  package.json  tsconfig.json
apps/client/src/: connection.ts  conversation.test.ts  conversation.ts  dashboard.test.ts  main.ts  tauri-bridge.ts
apps/client/src/pomodoro/: api.test.ts  api.ts  client.test.ts  client.ts  display.ts  enfoque-ui.ts  types.ts
apps/client/src/robbie/: RobbieAnimations.test.ts  RobbieAnimations.ts  RobbieController.ts  RobbiePersonality.ts  RobbieView.ts  eyes.ts  index.ts  robbie-view.ts  robbie.css  state-visuals.test.ts  state-visuals.ts  types.ts
apps/client/src/styles/: base.css  layout.css  layout.test.ts  robbie.css  tray.css
apps/client/src/ui/: dev-panel.ts
apps/server/: package.json  tsconfig.build.json  tsconfig.json
apps/server/src/: app.test.ts  app.ts  config.test.ts  config.ts  index.ts  sql.js.d.ts  websocket.ts
apps/server/src/middleware/: error-handler.ts
apps/server/src/pomodoro/: db.ts  pomodoro.test.ts  routes.ts  service.ts
apps/server/src/routes/: health.ts  root.ts
data/: pomodoro.db
docs/: ARCHITECTURE.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
