[package]
name = "robbie"
version = "0.1.0"
description = "Robbie Virtual desktop application"
authors = ["Robbie"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5.0", features = ["tray-icon", "macos-private-api"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
